--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 <!-- Navbar Start -->
 <nav class="navbar">
-	<a href="#" class="navbar-logo"><img src="img/logo/logoditonpremium.png"></a>
+	<a href="https://www.ditonpremium.com" class="navbar-logo" target="_blank"><img src="img/logo/logoditonpremium.png"></a>
 
 	<div class="navbar-nav">
 		<a href="#solid">Solid</a>
@@ -41,7 +41,7 @@
 
 
 	<div class="navbar-extra">
-		<a href="#" id="hamburger-menu"><i data-feather="menu"></i></a>
+		<a href="##" id="hamburger-menu"><i data-feather="menu"></i></a>
 	</div>
 </nav>
 <!-- Navbar End -->
@@ -707,7 +707,7 @@
 				<img src="img/title/title-10.png">
 		</div>
 			<div class="colors">
-				
+				<a href="velg.html">
 				<div class="colors-items">
 				<ul>
 					<img src="img/colors/Velg/Titanium Gray.png">
@@ -715,7 +715,7 @@
 					<li>Titanium Grey</li>
 				</ul>	
 				</div>
-
+				</a>
 				<div class="colors-items">
 				<ul>
 					<img src="img/colors/Velg/Alu Silver.png">
@@ -786,6 +786,7 @@
 				<img src="img/title/title-11.png">
 		</div>
 			<div class="colors">
+				<a href="pearl.html">
 				<div class="colors-items">
 				<ul>
 					<img src="img/colors/Special Color/Lembayung Violet.png">
@@ -793,6 +794,7 @@
 					<li>Lembayung Violet</li>
 				</ul>	
 				</div>
+				</a>
 				<div class="colors-items">
 				<ul>
 					<img src="img/colors/Special Color/Lembayung Gold.png">
@@ -821,6 +823,7 @@
 				<img src="img/title/title-12.png">
 		</div>
 			<div class="colors">
+				<a href="harley.html">
 				<div class="colors-items">
 				<ul>
 					<img src="img/colors/Harley/Black Jack Mat.png">
@@ -828,6 +831,7 @@
 					<li>Black Jack Mat</li>
 				</ul>	
 				</div>
+				</a>
 				<div class="colors-items">
 				<ul>
 					<img src="img/colors/Harley/Billiard Red.png">
@@ -888,6 +892,7 @@
 				<img src="img/title/title-13.png">
 			</div>
 			<div class="colors">
+				<a href="vespa.html">
 				<div class="colors-items">
 				<ul>
 					<img src="img/colors/vespa/Pastel Purple.png">
@@ -896,6 +901,7 @@
 					<li>warna dasar 9102 WHITE</li>
 				</ul>
 				</div>
+				</a>
 				<div class="colors-items">
 				<ul>
 					<img src="img/colors/vespa/Pastel Mint Green.png">
@@ -1049,12 +1055,13 @@
 				</ul>
 				</div>
 			</div>
-		</div>
+	</div>
 	<div class="category" id="xirallic">
 			<div class="title">
 				<img src="img/title/title-14.png">
 			</div>
 			<div class="colors">
+				<a href="xirallic.html">
 				<div class="colors-items">
 				<ul>
 					<img src="img/colors/Xirallic/Cosmic Green.png">
@@ -1063,6 +1070,7 @@
 					<li>warna dasar 9109 BLACK</li>
 				</ul>
 				</div>
+				</a>
 				<div class="colors-items">
 				<ul>
 					<img src="img/colors/Xirallic/Aztec Gold.png">
@@ -1127,6 +1135,7 @@
 				<img src="img/title/title-16.png">
 			</div>
 			<div class="colors">
+				<a href="hi temp.html">
 				<div class="colors-items">
 				<ul>
 					<img src="img/colors/Hi temp/HI-Temp Black.png">
@@ -1134,6 +1143,7 @@
 					<li>HI-Temp Black</li>
 				</ul>
 				</div>
+				</a>
 				<div class="colors-items">
 				<ul>
 					<img src="img/colors/Hi temp/HI-Temp Silver.png">
@@ -1150,6 +1160,7 @@
 				</div>
 			</div>
 		</div>
+		<a href="special.html">
 			<div class="colors-items ">
 				<div id="special">UNDERCOAT</div>
 				<ul>
@@ -1160,6 +1171,7 @@
 					<li>Bersihkan media dari debu, minyak & Karat. Semprotkan Diton Flintkote tanpa warna dasar.</li>
 				</ul>
 			</div>
+		</a>
 			<div class="colors-items ">
 				<div id="special">CHROME</div>
 				<ul>
@@ -1196,6 +1208,7 @@
 				<img src="img/title/title-15.png">
 		</div>
 		<div class="colors">
+			<a href="primer.html">
 			<div class="colors-items">
 			<ul>
 				<img src="img/colors/Primer/Primer Grey (Epoxy).png">
@@ -1203,6 +1216,7 @@
 				<li>Primer Grey<br>(Epoxy)</li>
 			</ul>
 			</div>
+			</a>
 			<div class="colors-items">
 			<ul>
 				<img src="img/colors/Primer/PP Plastic Primer.png">
@@ -1217,6 +1231,7 @@
 				<img src="img/title/title-17.png">
 		</div>
 		<div class="colors">
+			<a href="bunglon.html">
 			<div class="colors-items">
 			<ul>
 				<img src="img/colors/Bunglon/Kelly Orange.png">
@@ -1225,6 +1240,7 @@
 				<li>warna dasar 9109 BLACK</li>
 			</ul>
 			</div>
+			</a>
 			<div class="colors-items">
 			<ul>
 				<img src="img/colors/Bunglon/Mouve Red.png">
@@ -1247,63 +1263,64 @@
 <!-- Katalog End -->
 <!-- Footer Start -->
 <footer>
-<div class="row primary">
-  <div class="column about">
+	<div class="row primary">
+	  <div class="column about">
 
-  <h3>DITON PREMIUM</h3>
+	  <h3>DITON PREMIUM</h3>
 
-   <p>
-      Unduh Aplikasi Diton Premium Pilih warna yang tepat untuk motor Anda. Diton Premium kini hadir di Play Store.
-  </p>
+	   <p>
+	      Unduh Aplikasi Diton Premium Pilih warna yang tepat untuk motor Anda. Diton Premium kini hadir di Play Store.
+	  </p>
 
-  <div class="social">
-    <img src="img/logo/Playstor.png" alt="">
-  </div>
-</div>
+	  <div class="social">
+	    <img src="img/logo/Playstor.png" alt="">
+	  </div>
+	</div>
 
-<div class="column links">
-<h3>QUICK LINKS</h3>
+	<div class="column links">
+	<h3>QUICK LINKS</h3>
 
- <ul>
+	 <ul>
 
-  <li>
-   <a href="https://www.ditonpremium.com/about-us">About us</a>
-  </li>
-  <li>
-   <a href="https://www.ditonpremium.com/dealers">Location</a>
-  </li>
-  <li>
-   <a href="https://www.ditonpremium.com">Web Diton Premium</a>
-  </li>
-  <li>
-   <a href="https://www.ditonpremium.com/contact-us">Contact us</a>
-  </li>
- </ul>
+	  <li>
+	   <a href="https://www.ditonpremium.com/about-us">About us</a>
+	  </li>
+	  <li>
+	   <a href="https://www.ditonpremium.com/dealers">Location</a>
+	  </li>
+	  <li>
+	   <a href="https://www.ditonpremium.com">Web Diton Premium</a>
+	  </li>
+	  <li>
+	   <a href="https://www.ditonpremium.com/contact-us">Contact us</a>
+	  </li>
+	 </ul>
 
-</div>
+	</div>
 
-<div class="column subscribe">
- <h3>Newsletter</h3>
-  <div>
-   <input type="email" placeholder="Your email id here" />
-   <button>Subscribe</button>
-  </div>
+	<div class="column subscribe">
+	 <h3>Newsletter</h3>
+	  <div>
+	   <input type="email" placeholder="Your email id here" />
+	   <button>Subscribe</button>
+	  </div>
 
-</div>
+	</div>
 
-<div class="column ">
-	<h3>SOCIAL MEDIA</h3>
-	<ul class="sosial">
-		<a href=""><i data-feather="facebook"></i></a>
-		<a href=""><i data-feather="instagram"></i></a>
-	</ul>
-</div>
+	<div class="column ">
+		<h3>SOCIAL MEDIA</h3>
+		<ul class="sosial">
+			<a href="https://www.facebook.com/ditonpremiumofficial"><i data-feather="facebook"></i></a>
+			<a href="https://www.instagram.com/ditonpremium"><i data-feather="instagram"></i></a>
+			<a href="https://www.youtube.com/c/DitonPremium"><i data-feather="youtube"></i></a>
+		</ul>
+	</div>
 
-</div>
+	</div>
 
-<div class="row copyright">
-   <p>Copyright &copy; 2021 Foolish Developer</p>
-</div>
+	<div class="row copyright">
+	   <p>Copyright &copy; 2021 Foolish Developer</p>
+	</div>
 </footer>
 <!-- Footer End -->
 <!-- Feather Icons -->
