--- a/primer.html
+++ b/primer.html
@@ -22,9 +22,9 @@
 
 <!-- Navbar Start -->
 <nav class="navbar">
-	<a href="#" class="navbar-logo"><img src="img/logo/logoditonpremium.png"></a>
+	<a href="https://www.ditonpremium.com" class="navbar-logo" target="_blank"><img src="img/logo/logoditonpremium.png"></a>
 
-	<div class="navbar-nav">
+	<!-- <div class="navbar-nav">
 		<a href="#solid">Solid</a>
 		<a href="#metallic">Metallic</a>
 		<a href="#candytone">Candytone</a>
@@ -35,7 +35,7 @@
 
 	<div class="navbar-extra">
 		<a href="#" id="hamburger-menu"><i data-feather="menu"></i></a>
-	</div>
+	</div> -->
 </nav>
 <!-- Navbar End -->
 
@@ -43,153 +43,32 @@
 
 <main class="content">
 	<div class="preview">
-		<img class="imgPreview" src="img/Color Chat Motor/Solid Color/Color Chart_Solid Color_Black.jpg" alt="" >
+		<img class="imgPreview" src="img/Color Chat Motor/Primer Coat (Epoxy)/Color Chart_Primer Coat_Primer Grey.jpg" alt="" >
 		<div class="preview-btn">
 			<button class="btn" onclick="previous()">Prev</button>
-			<div ><p class="colors-name">9109 <br> BLACK</p></div>
+			<div ><p class="colors-name">9120 <br>Primer Grey<br>(Epoxy)</p></div>
 			<button class="btn" onclick="next()">Next</button>
 		</div>
 	</div>
-	<div class="category" id="solid">
-		<div class="title"><img src="img/title/title-1.png"></div>
+	<div class="category" id="primer coat">
+		<div class="title">
+				<img src="img/title/title-15.png">
+		</div>
 		<div class="colors">
-				<a href="#">
-				<div class="colors-items">
-				<ul>
-					<img src="img/SOLID COLORS/BLACK 9109.png">
-					<li>9109</li>
-					<li>BLACK</li>
-				</ul>
-				</div>
-				</a>
-				<div class="colors-items">
-				<ul>
-					<img src="img/SOLID COLORS/BLACK SEMI DOFF.jpg">
-					<li>9183</li>
-					<li>BLACK SEMI DOFF</li>
-				</ul>
-				</div>
-				<div class="colors-items">
-				<ul>
-					<img src="img/SOLID COLORS/BLACK DOFF.jpg">
-					<li>9184</li>
-					<li>BLACK DOFF</li>
-				</ul>
-				</div>
-				<div class="colors-items">
-				<ul>
-					<img src="img/SOLID COLORS/WHITE.jpg">
-					<li>9102</li>
-					<li>WHITE</li>
-				</ul>
-				</div>
-				<div class="colors-items">
-				<ul>
-					<img src="img/SOLID COLORS/SUPPER WHITE.jpg">
-					<li>9103</li>
-					<li>SUPER WHITE</li>
-				</ul>
-				</div>
-				<div class="colors-items">
-				<ul>
-					<img src="img/SOLID COLORS/SILVER.jpg">
-					<li>9124</li>
-					<li>SILVER</li>
-				</ul>
-				</div>
-				<div class="colors-items">
-				<ul>
-					<img src="img/SOLID COLORS/GOLD.jpg">
-					<li>9123</li>
-					<li>GOLD</li>
-				</ul>
-				</div>
-				<div class="colors-items">
-				<ul>
-					<img src="img/SOLID COLORS/POLICE GREY.jpg">
-					<li>9112</li>
-					<li>POLICE GREY</li>
-				</ul>
-				</div>
-				<div class="colors-items">
-				<ul>
-					<img src="img/SOLID COLORS/BOXER BLUE.jpg">
-					<li>9422</li>
-					<li>BOXER BLUE</li>
-					<li>  warna dasar 9102 WHITE</li>
-				</ul>
-				</div>
-				<div class="colors-items">
-					<ul>
-					<img src="img/SOLID COLORS/CHILLI RED.jpg">
-					<li>9462</li>
-					<li>CHILLI RED</li>
-					<li>  warna dasar 9102 WHITE</li>
-				</ul>
-				</div>
-				<div class="colors-items">
-				<ul>
-					<img src="img/SOLID COLORS/PETRONAS GREEN.jpg">
-					<li>9238</li>
-					<li>PETRONAS GREEN</li>
-					<li>  warna dasar 9102 WHITE</li>
-				</ul>
-				</div>
-				<div class="colors-items">
-				<ul>
-					<img src="img/SOLID COLORS/PREMIUM MAROON.jpg">
-					<li>9254</li>
-					<li>PREMIUM MAROON</li>
-					<li>  warna dasar 9102 WHITE</li>
-				</ul>
-				</div>
-				<div class="colors-items">
-				<ul>
-					<img src="img/SOLID COLORS/MAGENTA PINK.jpg">
-					<li>9433</li>
-					<li>MAGENTA PINK</li>
-					<li>  warna dasar 9102 WHITE</li>
-				</ul>
-				</div>
-				<div class="colors-items">
-				<ul>
-					<img src="img/SOLID COLORS/DARK GREEN.jpg">
-					<li>9432</li>
-					<li>DARK GREEN</li>
-					<li>  warna dasar 9102 WHITE</li>
-				</ul>
-				</div>
-				<div class="colors-items">
-				<ul>
-					<img src="img/SOLID COLORS/TIGER YELLOW.jpg">
-					<li>9425</li>
-					<li>TIGER YELLOW</li>
-					<li>  warna dasar 9102 WHITE</li>
-				</ul>
-				</div>
-				<div class="colors-items">
-				<ul>
-					<img src="img/SOLID COLORS/MASTER YELLOW.jpg">
-					<li>9431</li>
-					<li>MASTER YELLOW</li>
-					<li>  warna dasar 9102 WHITE</li>
-				</ul>
-				</div>
-				<div class="colors-items">
-				<ul>
-					<img src="img/SOLID COLORS/FORTUNE BLUE.jpg">
-					<li>9421</li>
-					<li>FORTUNE BLUE</li>
-					<li>  warna dasar 9102 WHITE</li>
-				</ul>
-				</div>
-				<div class="colors-items">
-				<ul>
-					<img src="img/SOLID COLORS/ARMY GREEN.jpg">
-					<li>9303</li>
-					<li>ARMY GREEN</li>
-				</ul>
-				</div>
+			<div class="colors-items">
+			<ul>
+				<img src="img/colors/Primer/Primer Grey (Epoxy).png">
+				<li>9120</li>
+				<li>Primer Grey<br>(Epoxy)</li>
+			</ul>
+			</div>
+			<div class="colors-items">
+			<ul>
+				<img src="img/colors/Primer/PP Plastic Primer.png">
+				<li>PP 9100**</li>
+				<li>PP Plastic Primer<br>(Transparant)</li>
+			</ul>
+			</div>
 		</div>
 	</div>
 	<div class="btn-group">
@@ -197,17 +76,19 @@
 			<i class="fa-solid fa-circle-play fa-2xl"></i>
 		</div>
 		<hr>
+		<a href="index.html#primer coat">
 		<div class="back">
-			<i class=""><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-back-up" width="50" height="50" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" onclick="history.back()">
+			<i class=""><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-back-up" width="50" height="50" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" >
 	   		<path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
 	   		<path d="M9 14l-4 -4l4 -4"></path>
 	  		 <path d="M5 10h11a4 4 0 1 1 0 8h-1"></path>
 			</svg>
 			</i>
 		</div>
+		</a>
 	</div>
 	<div class="clip">
-		<iframe id="iframe" src="https://www.youtube.com/embed/oiKrvchVs-I?enablejsapi=1&version=3&playerapiid=ytplayer" allow="autoplay" frameborder="0" allowscriptaccess="always" allowfullscreen></iframe>
+		<iframe id="iframe" src="https://www.youtube.com/embed/4SbPmWTTu_A?enablejsapi=1&version=3&playerapiid=ytplayer" allow="autoplay" frameborder="0" allowscriptaccess="always" allowfullscreen></iframe>
 	</div>
 	<!-- modal clip start -->
 	<div id="myModal" class="modal">
@@ -218,7 +99,68 @@
 
 <!-- Main Content End-->
 
+<!-- Footer Start -->
+<footer>
+	<div class="row primary">
+	  <div class="column about">
 
+	  <h3>DITON PREMIUM</h3>
+
+	   <p>
+	      Unduh Aplikasi Diton Premium Pilih warna yang tepat untuk motor Anda. Diton Premium kini hadir di Play Store.
+	  </p>
+
+	  <div class="social">
+	    <img src="img/logo/Playstor.png" alt="">
+	  </div>
+	</div>
+
+	<div class="column links">
+	<h3>QUICK LINKS</h3>
+
+	 <ul>
+
+	  <li>
+	   <a href="https://www.ditonpremium.com/about-us">About us</a>
+	  </li>
+	  <li>
+	   <a href="https://www.ditonpremium.com/dealers">Location</a>
+	  </li>
+	  <li>
+	   <a href="https://www.ditonpremium.com">Web Diton Premium</a>
+	  </li>
+	  <li>
+	   <a href="https://www.ditonpremium.com/contact-us">Contact us</a>
+	  </li>
+	 </ul>
+
+	</div>
+
+	<div class="column subscribe">
+	 <h3>Newsletter</h3>
+	  <div>
+	   <input type="email" placeholder="Your email id here" />
+	   <button>Subscribe</button>
+	  </div>
+
+	</div>
+
+	<div class="column ">
+		<h3>SOCIAL MEDIA</h3>
+		<ul class="sosial">
+			<a href="https://www.facebook.com/ditonpremiumofficial"><i data-feather="facebook"></i></a>
+			<a href="https://www.instagram.com/ditonpremium"><i data-feather="instagram"></i></a>
+			<a href="https://www.youtube.com/c/DitonPremium"><i data-feather="youtube"></i></a>
+		</ul>
+	</div>
+
+	</div>
+
+	<div class="row copyright">
+	   <p>Copyright &copy; 2021 Foolish Developer</p>
+	</div>
+</footer>
+<!-- Footer End -->
 	
 
 <!-- Feather Icons -->
@@ -230,29 +172,12 @@ let imgPreview =  document.querySelector('.imgPreview');
 let colorsName = document.querySelector('.colors-name');
 let videoLink = document.querySelector('iframe');
 let images = [
-	'img/Color Chat Motor/Solid Color/Color Chart_Solid Color_Black.jpg',
-	'img/Color Chat Motor/Solid Color/Color Chart_Solid Color_Semi Doff.jpg',
-	'img/Color Chat Motor/Solid Color/Color Chart_Solid Color_Black Doff.jpg',
-	'img/Color Chat Motor/Solid Color/Color Chart_Solid Color_White.jpg',
-	'img/Color Chat Motor/Solid Color/Color Chart_Solid Color_ Super White.jpg',
-	'img/Color Chat Motor/Solid Color/Color Chart_Solid Color_ Silver.jpg',
-	'img/Color Chat Motor/Solid Color/Color Chart_Solid Color_ Gold.jpg',
-	'img/Color Chat Motor/Solid Color/Color Chart_Solid Color_ Police Grey.jpg',
-	'img/Color Chat Motor/Solid Color/Color Chart_Solid Color_ Boxer Blue.jpg',
-	'img/Color Chat Motor/Solid Color/Color Chart_Solid Color_ Chilli Red.jpg',
-	'img/Color Chat Motor/Solid Color/Color Chart_Solid Color_ Petronas Green.jpg',
-	'img/Color Chat Motor/Solid Color/Color Chart_Solid Color_ Premium Maroon.jpg',
-	'img/Color Chat Motor/Solid Color/Color Chart_Solid Color_ Magenta Pink.jpg',
-	'img/Color Chat Motor/Solid Color/Color Chart_Solid Color_ Dark Green.jpg',
-	'img/Color Chat Motor/Solid Color/Color Chart_Solid Color_ Tiger Yellow.jpg',
-	'img/Color Chat Motor/Solid Color/Color Chart_Solid Color_ Master Yellow.jpg',
-	'img/Color Chat Motor/Solid Color/Color Chart_Solid Color_ Fortune Blue.jpg',
-	'img/Color Chat Motor/Solid Color/Color Chart_Solid Color_ Army Green.jpg'
+	'img/Color Chat Motor/Primer Coat (Epoxy)/Color Chart_Primer Coat_Primer Grey.jpg',
+	'img/Color Chat Motor/Primer Coat (Epoxy)/Color Chart_Primer Coat_Primer Cpat (Epoxy).jpg'
 
 ];
-let color = ['9109<br> BLACK','9183<br> BLACK SEMI DOFF','9184<br> BLACK DOFF','9102<br> WHITE','9103<br> SUPER WHITE','9124<br> SILVER','9123<br> GOLD','9112<br> POLICE GREY','9422<br> BOXER BLUE','9462<br> CHILLI RED','9238<br> PETRONAS GREEN', '9254<br> PREMIUM MAROON','9433<br> MAGENTA PINK','9432<br> DARK GREEN','9425<br> TIGER YELLOW', '9431<br>MASTER YELLOW','9421<br> FORTUNE BLUE','9303<br> ARMY GREEN'
-	];
-let videos = ['oiKrvchVs-I','JTlV2Gns1Fo','l_0Ru3iie1k','JA91WfNU2aY','kZ88fAwDqtw','HmCwWdxK2oA','SAAgsLv7zyc','wKtkuzpSkgY','AFamnjT7wmM','9tRr8HM_af0','0W_lBsf4C3Q','YoqrEXCFU5I','_Z12_GXAg8E','V6d7Tb6we04','Dj5BQNiz5sM','FGJkt_uf0SM','msbFOFeGsY4','fxvL1JAu4dw'];
+let color = ['9120<br> PRIMER GREY<br>(EPOXY)','PP 9100**<br> PP PLASTIC PRIMER<br>(TRANSPARANT)'];
+let videos = ['4SbPmWTTu_A','VsVg_aILGMQ'];
 
 let i = 0;
 function next() {
@@ -273,6 +198,24 @@ function previous() {
     colorsName.innerHTML= color[i];
     videoLink.setAttribute('src','https://www.youtube.com/embed/'+videos[i]+'?enablejsapi=1&version=3&playerapiid=ytplayer');
     }
+    // clip
+let	btnPlay = document.querySelector('.play');
+let clip = document.querySelector('.clip');
+let iframe = document.querySelector('iframe');
+btnPlay.onclick= function(){
+	btnPlay.classList.add('active');
+	clip.classList.add('active');
+	iframe.contentWindow.postMessage( '{"event":"command", "func":"playVideo", "args":""}', '*');
+}
+
+document.addEventListener('click', function (e) {
+	if (!btnPlay.contains(e.target) ) {
+		clip.classList.remove('active');
+		iframe.contentWindow.postMessage( '{"event":"command", "func":"stopVideo", "args":""}', '*');
+
+
+	}
+});
 </script>
 	<!-- MY Script -->
 <script defer src="js/script.js"></script>
