--- a/moge.html
+++ b/moge.html
@@ -22,9 +22,9 @@
 
 <!-- Navbar Start -->
 <nav class="navbar">
-	<a href="#" class="navbar-logo"><img src="img/logo/logoditonpremium.png"></a>
+	<a href="https://www.ditonpremium.com" class="navbar-logo"><img src="img/logo/logoditonpremium.png"></a>
 
-	<div class="navbar-nav">
+	<!-- <div class="navbar-nav">
 		<a href="#solid">Solid</a>
 		<a href="#metallic">Metallic</a>
 		<a href="#candytone">Candytone</a>
@@ -35,7 +35,7 @@
 
 	<div class="navbar-extra">
 		<a href="#" id="hamburger-menu"><i data-feather="menu"></i></a>
-	</div>
+	</div> -->
 </nav>
 <!-- Navbar End -->
 
@@ -197,8 +197,9 @@
 			<i class="fa-solid fa-circle-play fa-2xl"></i>
 		</div>
 		<hr>
+		<a href="index.html#"></a>
 		<div class="back">
-			<i class=""><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-back-up" width="50" height="50" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" onclick="history.back()">
+			<i class=""><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-back-up" width="50" height="50" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" >
 	   		<path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
 	   		<path d="M9 14l-4 -4l4 -4"></path>
 	  		 <path d="M5 10h11a4 4 0 1 1 0 8h-1"></path>
