--- a/vespa.html
+++ b/vespa.html
@@ -43,161 +43,186 @@
 
 <main class="content">
 	<div class="preview">
-		<img class="imgPreview" src="img/Color Chat Motor/Solid Color/Color Chart_Solid Color_Black.jpg" alt="" >
+		<img class="imgPreview" src="img/Color Chat Motor/Vespa Color/Color Chart_Vespa Color_ Pastel Purple.jpg" alt="" >
 		<div class="preview-btn">
 			<button class="btn" onclick="previous()">Prev</button>
-			<div ><p class="colors-name">9109 <br> BLACK</p></div>
+			<div ><p class="colors-name">V 9530** <br> Pastel Purple</p></div>
 			<button class="btn" onclick="next()">Next</button>
 		</div>
 	</div>
-	<div class="category" id="solid">
-		<div class="title"><img src="img/title/title-1.png"></div>
-		<div class="colors">
-				<a href="#">
+	<div class="category" id="vespa">
+			<div class="title">
+				<img src="img/title/title-13.png">
+			</div>
+			<div class="colors">
 				<div class="colors-items">
 				<ul>
-					<img src="img/SOLID COLORS/BLACK 9109.png">
-					<li>9109</li>
-					<li>BLACK</li>
-				</ul>
-				</div>
-				</a>
-				<div class="colors-items">
-				<ul>
-					<img src="img/SOLID COLORS/BLACK SEMI DOFF.jpg">
-					<li>9183</li>
-					<li>BLACK SEMI DOFF</li>
+					<img src="img/colors/vespa/Pastel Purple.png">
+					<li>V 9530**</li>
+					<li>Pastel Purple</li>
+					<li>warna dasar 9102 WHITE</li>
 				</ul>
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/SOLID COLORS/BLACK DOFF.jpg">
-					<li>9184</li>
-					<li>BLACK DOFF</li>
+					<img src="img/colors/vespa/Pastel Mint Green.png">
+					<li>V 9531**</li>
+					<li>Pastel Mint Green</li>
+					<li>warna dasar 9102 WHITE</li>
 				</ul>
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/SOLID COLORS/WHITE.jpg">
-					<li>9102</li>
-					<li>WHITE</li>
+					<img src="img/colors/vespa/Pastel Yellow.png">
+					<li>V 9532**</li>
+					<li>Pastel Yellow</li>
+					<li>warna dasar 9102 WHITE</li>
 				</ul>
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/SOLID COLORS/SUPPER WHITE.jpg">
-					<li>9103</li>
-					<li>SUPER WHITE</li>
+					<img src="img/colors/vespa/Pastel Blue.png">
+					<li>V 9533**</li>
+					<li>Pastel Blue</li>
+					<li>warna dasar 9102 WHITE</li>
 				</ul>
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/SOLID COLORS/SILVER.jpg">
-					<li>9124</li>
-					<li>SILVER</li>
+					<img src="img/colors/vespa/Pastel Pink.png">
+					<li>V 9534**</li>
+					<li>Pastel Pink</li>
+					<li>warna dasar 9102 WHITE</li>
 				</ul>
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/SOLID COLORS/GOLD.jpg">
-					<li>9123</li>
-					<li>GOLD</li>
+					<img src="img/colors/vespa/Orange Tramonto.png">
+					<li>V 9485**</li>
+					<li>Orange Tramonto</li>
+					<li>warna dasar 9102 WHITE</li>
 				</ul>
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/SOLID COLORS/POLICE GREY.jpg">
-					<li>9112</li>
-					<li>POLICE GREY</li>
+					<img src="img/colors/vespa/White Innocenza.png">
+					<li>V 9481**</li>
+					<li>White Innocenza</li>
+					<li>warna dasar 9102 WHITE</li>
 				</ul>
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/SOLID COLORS/BOXER BLUE.jpg">
-					<li>9422</li>
-					<li>BOXER BLUE</li>
-					<li>  warna dasar 9102 WHITE</li>
-				</ul>
-				</div>
-				<div class="colors-items">
-					<ul>
-					<img src="img/SOLID COLORS/CHILLI RED.jpg">
-					<li>9462</li>
-					<li>CHILLI RED</li>
-					<li>  warna dasar 9102 WHITE</li>
+					<img src="img/colors/vespa/Blue Audace.png">
+					<li>V 9482**</li>
+					<li>Blue Audace</li>
+					<li>warna dasar 9102 WHITE</li>
 				</ul>
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/SOLID COLORS/PETRONAS GREEN.jpg">
-					<li>9238</li>
-					<li>PETRONAS GREEN</li>
-					<li>  warna dasar 9102 WHITE</li>
+					<img src="img/colors/vespa/Midnight Blue.png">
+					<li>V 9484**</li>
+					<li>Midnight Blue</li>
+					<li>warna dasar 9180 S.METALLIC</li>
 				</ul>
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/SOLID COLORS/PREMIUM MAROON.jpg">
-					<li>9254</li>
-					<li>PREMIUM MAROON</li>
-					<li>  warna dasar 9102 WHITE</li>
+					<img src="img/colors/vespa/Light Ivory.png">
+					<li>V 9115**</li>
+					<li>Light Ivory</li>
+					<li>warna dasar 9102 WHITE</li>
 				</ul>
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/SOLID COLORS/MAGENTA PINK.jpg">
-					<li>9433</li>
-					<li>MAGENTA PINK</li>
-					<li>  warna dasar 9102 WHITE</li>
+					<img src="img/colors/vespa/Green Relax.png">
+					<li>V 9488**</li>
+					<li>Green Relax</li>
+					<li>warna dasar 9102 WHITE</li>
 				</ul>
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/SOLID COLORS/DARK GREEN.jpg">
-					<li>9432</li>
-					<li>DARK GREEN</li>
-					<li>  warna dasar 9102 WHITE</li>
+					<img src="img/colors/vespa/Red Passione.png">
+					<li>V 9480**</li>
+					<li>Red Passione</li>
+					<li>warna dasar 9102 WHITE</li>
 				</ul>
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/SOLID COLORS/TIGER YELLOW.jpg">
-					<li>9425</li>
-					<li>TIGER YELLOW</li>
-					<li>  warna dasar 9102 WHITE</li>
+					<img src="img/colors/vespa/Blue Vivace.png">
+					<li>V 9487**</li>
+					<li>Blue Vivace</li>
+					<li>warna dasar 9124 SILVER</li>
 				</ul>
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/SOLID COLORS/MASTER YELLOW.jpg">
-					<li>9431</li>
-					<li>MASTER YELLOW</li>
-					<li>  warna dasar 9102 WHITE</li>
+					<img src="img/colors/vespa/Piaggio Blue.png">
+					<li>V 9185**</li>
+					<li>Piaggio Blue</li>
+					<li>warna dasar 9124 SILVER</li>
 				</ul>
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/SOLID COLORS/FORTUNE BLUE.jpg">
-					<li>9421</li>
-					<li>FORTUNE BLUE</li>
-					<li>  warna dasar 9102 WHITE</li>
+					<img src="img/colors/vespa/Grigio Titanio.png">
+					<li>V 9486**</li>
+					<li>Grigio Titanio</li>
+					<li>warna dasar 9124 SILVER</li>
 				</ul>
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/SOLID COLORS/ARMY GREEN.jpg">
-					<li>9303</li>
-					<li>ARMY GREEN</li>
+					<img src="img/colors/vespa/Green Bosco.png">
+					<li>V 9486**</li>
+					<li>Green Bosco</li>
+					<li>warna dasar 9180 S.METALLIC</li>
 				</ul>
 				</div>
-		</div>
+				<div class="colors-items">
+				<ul>
+					<img src="img/colors/vespa/Nardo Grey.png">
+					<li>V 9483**</li>
+					<li>Nardo Grey</li>
+					<li>warna dasar 9102 WHITE</li>
+				</ul>
+				</div>
+				<div class="colors-items">
+				<ul>
+					<img src="img/colors/vespa/Yellow Sole.png">
+					<li>V 9490**</li>
+					<li>Yellow Sole</li>
+					<li>warna dasar 9102 WHITE</li>
+				</ul>
+				</div>
+				<div class="colors-items">
+				<ul>
+					<img src="img/colors/vespa/Black Vulcano.png">
+					<li>V 9491**</li>
+					<li>Black Vulcano</li>
+					<li>warna dasar 9109 BLACK</li>
+				</ul>
+				</div>
+				<div class="colors-items">
+				<ul>
+					<img src="img/colors/vespa/Dark Brown Met.png">
+					<li>V 9251**</li>
+					<li>Dark Brown Met</li>
+					<li>warna dasar 9124 SILVER</li>
+				</ul>
+				</div>
+			</div>
 	</div>
 	<div class="btn-group">
 		<div class="play">	
 			<i class="fa-solid fa-circle-play fa-2xl"></i>
 		</div>
 		<hr>
-		<a href="index.html#solid">
+		<a href="index.html#vespa">
 		<div class="back">
 			<i class=""><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-back-up" width="50" height="50" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" >
 	   		<path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
@@ -209,7 +234,7 @@
 		</a>
 	</div>
 	<div class="clip">
-		<iframe id="iframe" src="https://www.youtube.com/embed/oiKrvchVs-I?enablejsapi=1&version=3&playerapiid=ytplayer" allow="autoplay" frameborder="0" allowscriptaccess="always" allowfullscreen></iframe>
+		<iframe id="iframe" src="https://www.youtube.com/embed/1gGOAypxtFg?enablejsapi=1&version=3&playerapiid=ytplayer" allow="autoplay" frameborder="0" allowscriptaccess="always" allowfullscreen></iframe>
 	</div>
 	<!-- modal clip start -->
 	<div id="myModal" class="modal">
@@ -293,29 +318,31 @@ let imgPreview =  document.querySelector('.imgPreview');
 let colorsName = document.querySelector('.colors-name');
 let videoLink = document.querySelector('iframe');
 let images = [
-	'img/Color Chat Motor/Solid Color/Color Chart_Solid Color_Black.jpg',
-	'img/Color Chat Motor/Solid Color/Color Chart_Solid Color_Semi Doff.jpg',
-	'img/Color Chat Motor/Solid Color/Color Chart_Solid Color_Black Doff.jpg',
-	'img/Color Chat Motor/Solid Color/Color Chart_Solid Color_White.jpg',
-	'img/Color Chat Motor/Solid Color/Color Chart_Solid Color_ Super White.jpg',
-	'img/Color Chat Motor/Solid Color/Color Chart_Solid Color_ Silver.jpg',
-	'img/Color Chat Motor/Solid Color/Color Chart_Solid Color_ Gold.jpg',
-	'img/Color Chat Motor/Solid Color/Color Chart_Solid Color_ Police Grey.jpg',
-	'img/Color Chat Motor/Solid Color/Color Chart_Solid Color_ Boxer Blue.jpg',
-	'img/Color Chat Motor/Solid Color/Color Chart_Solid Color_ Chilli Red.jpg',
-	'img/Color Chat Motor/Solid Color/Color Chart_Solid Color_ Petronas Green.jpg',
-	'img/Color Chat Motor/Solid Color/Color Chart_Solid Color_ Premium Maroon.jpg',
-	'img/Color Chat Motor/Solid Color/Color Chart_Solid Color_ Magenta Pink.jpg',
-	'img/Color Chat Motor/Solid Color/Color Chart_Solid Color_ Dark Green.jpg',
-	'img/Color Chat Motor/Solid Color/Color Chart_Solid Color_ Tiger Yellow.jpg',
-	'img/Color Chat Motor/Solid Color/Color Chart_Solid Color_ Master Yellow.jpg',
-	'img/Color Chat Motor/Solid Color/Color Chart_Solid Color_ Fortune Blue.jpg',
-	'img/Color Chat Motor/Solid Color/Color Chart_Solid Color_ Army Green.jpg'
+	'img/Color Chat Motor/Vespa Color/Color Chart_Vespa Color_ Pastel Purple.jpg',
+	'img/Color Chat Motor/Vespa Color/Color Chart_Vespa Color_ Pastel Mint Green.jpg',
+	'img/Color Chat Motor/Vespa Color/Color Chart_Vespa Color_ Pastel Yellow.jpg',
+	'img/Color Chat Motor/Vespa Color/Color Chart_Vespa Color_ Pastel Blue.jpg',
+	'img/Color Chat Motor/Vespa Color/Color Chart_Vespa Color_ Pastel Pink.jpg',
+	'img/Color Chat Motor/Vespa Color/Color Chart_Vespa Color_Orange Tramonto.jpg',
+	'img/Color Chat Motor/Vespa Color/Color Chart_Vespa Color_White Innocenza.jpg',
+	'img/Color Chat Motor/Vespa Color/Color Chart_Vespa Color_Blue Audace.jpg',
+	'img/Color Chat Motor/Vespa Color/Color Chart_Vespa Color_Midnight Blue.jpg',
+	'img/Color Chat Motor/Vespa Color/Color Chart_Vespa Color_Light Ivory.jpg',
+	'img/Color Chat Motor/Vespa Color/Color Chart_Vespa Color_Green Relax.jpg',
+	'img/Color Chat Motor/Vespa Color/Color Chart_Vespa Color_Red Passione.jpg',
+	'img/Color Chat Motor/Vespa Color/Color Chart_Vespa Color_Blue Vivace.jpg',
+	'img/Color Chat Motor/Vespa Color/Color Chart_Vespa Color_Piaggio Blue.jpg',
+	'img/Color Chat Motor/Vespa Color/Color Chart_Vespa Color_Grigio Titanio.jpg',
+	'img/Color Chat Motor/Vespa Color/Color Chart_Vespa Color_Green Bosco.jpg',
+	'img/Color Chat Motor/Vespa Color/Color Chart_Vespa Color_Nardo Grey.jpg',
+	'img/Color Chat Motor/Vespa Color/Color Chart_Vespa Color_Yellow Sole.jpg',
+	'img/Color Chat Motor/Vespa Color/Color Chart_Vespa Color_Black Vulcano.jpg',
+	'img/Color Chat Motor/Vespa Color/Color Chart_Vespa Color_Dark Brown Met.jpg'
 
 ];
-let color = ['9109<br> BLACK','9183<br> BLACK SEMI DOFF','9184<br> BLACK DOFF','9102<br> WHITE','9103<br> SUPER WHITE','9124<br> SILVER','9123<br> GOLD','9112<br> POLICE GREY','9422<br> BOXER BLUE','9462<br> CHILLI RED','9238<br> PETRONAS GREEN', '9254<br> PREMIUM MAROON','9433<br> MAGENTA PINK','9432<br> DARK GREEN','9425<br> TIGER YELLOW', '9431<br>MASTER YELLOW','9421<br> FORTUNE BLUE','9303<br> ARMY GREEN'
+let color = ['V 9530**<br> PASTEL PURPLE','V 9531**<br> PASTEL MINT GREEN','V 9532**<br> PASTEL YELLOW','V 9533**<br> PASTEL BLUE','V 9534**<br> PASTEL PINK','V 9485**<br> ORANGE TRAMONTO','V 9481**<br> WHITE INNOCENZA','V 9482**<br> BLUE AUDACE','V 9484**<br> MIDNIGHT BLUE','V 9115**<br> LIGHT IVORY','LIGHT IVORY<br> GREEN RELAX', 'V 9480**<br> RED PASSIONE','V 9487**<br> BLUE VIVACE','V 9185**<br> PIAGGIO BLUE','V 9486**<br> GRIGIO TITANIO', 'V 9486**<br>GREEN BOSCO','V 9483**<br> NARDO GREY','V 9490**<br> YELLOW SOLE','V 9491**<br> BLACK VULCANO','V 9251**<br> DARK BROWN MET'
 	];
-let videos = ['oiKrvchVs-I','JTlV2Gns1Fo','l_0Ru3iie1k','JA91WfNU2aY','kZ88fAwDqtw','HmCwWdxK2oA','SAAgsLv7zyc','wKtkuzpSkgY','AFamnjT7wmM','9tRr8HM_af0','0W_lBsf4C3Q','YoqrEXCFU5I','_Z12_GXAg8E','V6d7Tb6we04','Dj5BQNiz5sM','FGJkt_uf0SM','msbFOFeGsY4','fxvL1JAu4dw'];
+let videos = ['1gGOAypxtFg','Xbb1n7Lshm0','XaxEXJ0oTaE','Vry0XA25l0k','yS0npV_QlSU','bF1y0sr1304','cXu4MeYqEpQ','zFKO-WtCEhc','lJSDVdVUX9Q','Je0Mr4FcToA','ka-FBWmopGQ','ZvPcaBwJ0eA','JHGu89W0xI4','5SjeJKY5AAw','9ED02ptGU7I','jb-6rKBXNag','Ac-_7YmhzGU','npXC7VlzaGg','ppv7m4jjczw','Y1ScUjftqCc'];
 
 let i = 0;
 function next() {
