--- a/vespa.html
+++ b/vespa.html
@@ -57,7 +57,7 @@
 			<div class="colors">
 				<div class="colors-items">
 				<ul>
-					<img src="img/colors/vespa/Pastel Purple.png">
+					<img src="img/colors/Vespa/Pastel Purple.png">
 					<li>V 9530**</li>
 					<li>Pastel Purple</li>
 					<li>warna dasar 9102 WHITE</li>
@@ -65,7 +65,7 @@
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/colors/vespa/Pastel Mint Green.png">
+					<img src="img/colors/Vespa/Pastel Mint Green.png">
 					<li>V 9531**</li>
 					<li>Pastel Mint Green</li>
 					<li>warna dasar 9102 WHITE</li>
@@ -73,7 +73,7 @@
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/colors/vespa/Pastel Yellow.png">
+					<img src="img/colors/Vespa/Pastel Yellow.png">
 					<li>V 9532**</li>
 					<li>Pastel Yellow</li>
 					<li>warna dasar 9102 WHITE</li>
@@ -81,7 +81,7 @@
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/colors/vespa/Pastel Blue.png">
+					<img src="img/colors/Vespa/Pastel Blue.png">
 					<li>V 9533**</li>
 					<li>Pastel Blue</li>
 					<li>warna dasar 9102 WHITE</li>
@@ -89,7 +89,7 @@
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/colors/vespa/Pastel Pink.png">
+					<img src="img/colors/Vespa/Pastel Pink.png">
 					<li>V 9534**</li>
 					<li>Pastel Pink</li>
 					<li>warna dasar 9102 WHITE</li>
@@ -97,7 +97,7 @@
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/colors/vespa/Orange Tramonto.png">
+					<img src="img/colors/Vespa/Orange Tramonto.png">
 					<li>V 9485**</li>
 					<li>Orange Tramonto</li>
 					<li>warna dasar 9102 WHITE</li>
@@ -105,7 +105,7 @@
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/colors/vespa/White Innocenza.png">
+					<img src="img/colors/Vespa/White Innocenza.png">
 					<li>V 9481**</li>
 					<li>White Innocenza</li>
 					<li>warna dasar 9102 WHITE</li>
@@ -113,7 +113,7 @@
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/colors/vespa/Blue Audace.png">
+					<img src="img/colors/Vespa/Blue Audace.png">
 					<li>V 9482**</li>
 					<li>Blue Audace</li>
 					<li>warna dasar 9102 WHITE</li>
@@ -121,7 +121,7 @@
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/colors/vespa/Midnight Blue.png">
+					<img src="img/colors/Vespa/Midnight Blue.png">
 					<li>V 9484**</li>
 					<li>Midnight Blue</li>
 					<li>warna dasar 9180 S.METALLIC</li>
@@ -129,7 +129,7 @@
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/colors/vespa/Light Ivory.png">
+					<img src="img/colors/Vespa/Light Ivory.png">
 					<li>V 9115**</li>
 					<li>Light Ivory</li>
 					<li>warna dasar 9102 WHITE</li>
@@ -137,7 +137,7 @@
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/colors/vespa/Green Relax.png">
+					<img src="img/colors/Vespa/Green Relax.png">
 					<li>V 9488**</li>
 					<li>Green Relax</li>
 					<li>warna dasar 9102 WHITE</li>
@@ -145,7 +145,7 @@
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/colors/vespa/Red Passione.png">
+					<img src="img/colors/Vespa/Red Passione.png">
 					<li>V 9480**</li>
 					<li>Red Passione</li>
 					<li>warna dasar 9102 WHITE</li>
@@ -153,7 +153,7 @@
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/colors/vespa/Blue Vivace.png">
+					<img src="img/colors/Vespa/Blue Vivace.png">
 					<li>V 9487**</li>
 					<li>Blue Vivace</li>
 					<li>warna dasar 9124 SILVER</li>
@@ -161,7 +161,7 @@
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/colors/vespa/Piaggio Blue.png">
+					<img src="img/colors/Vespa/Piaggio Blue.png">
 					<li>V 9185**</li>
 					<li>Piaggio Blue</li>
 					<li>warna dasar 9124 SILVER</li>
@@ -169,7 +169,7 @@
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/colors/vespa/Grigio Titanio.png">
+					<img src="img/colors/Vespa/Grigio Titanio.png">
 					<li>V 9486**</li>
 					<li>Grigio Titanio</li>
 					<li>warna dasar 9124 SILVER</li>
@@ -177,7 +177,7 @@
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/colors/vespa/Green Bosco.png">
+					<img src="img/colors/Vespa/Green Bosco.png">
 					<li>V 9486**</li>
 					<li>Green Bosco</li>
 					<li>warna dasar 9180 S.METALLIC</li>
@@ -185,7 +185,7 @@
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/colors/vespa/Nardo Grey.png">
+					<img src="img/colors/Vespa/Nardo Grey.png">
 					<li>V 9483**</li>
 					<li>Nardo Grey</li>
 					<li>warna dasar 9102 WHITE</li>
@@ -193,7 +193,7 @@
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/colors/vespa/Yellow Sole.png">
+					<img src="img/colors/Vespa/Yellow Sole.png">
 					<li>V 9490**</li>
 					<li>Yellow Sole</li>
 					<li>warna dasar 9102 WHITE</li>
@@ -201,7 +201,7 @@
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/colors/vespa/Black Vulcano.png">
+					<img src="img/colors/Vespa/Black Vulcano.png">
 					<li>V 9491**</li>
 					<li>Black Vulcano</li>
 					<li>warna dasar 9109 BLACK</li>
@@ -209,7 +209,7 @@
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/colors/vespa/Dark Brown Met.png">
+					<img src="img/colors/Vespa/Dark Brown Met.png">
 					<li>V 9251**</li>
 					<li>Dark Brown Met</li>
 					<li>warna dasar 9124 SILVER</li>
