--- a/index.html
+++ b/index.html
@@ -895,7 +895,7 @@
 				<a href="vespa.html">
 				<div class="colors-items">
 				<ul>
-					<img src="img/colors/Vespa/Pastel Purple.png">
+					<img src="img/colors/vespa/Pastel Purple.png">
 					<li>V 9530**</li>
 					<li>Pastel Purple</li>
 					<li>warna dasar 9102 WHITE</li>
@@ -904,7 +904,7 @@
 				</a>
 				<div class="colors-items">
 				<ul>
-					<img src="img/colors/Vespa/Pastel Mint Green.png">
+					<img src="img/colors/vespa/Pastel Mint Green.png">
 					<li>V 9531**</li>
 					<li>Pastel Mint Green</li>
 					<li>warna dasar 9102 WHITE</li>
@@ -912,7 +912,7 @@
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/colors/Vespa/Pastel Yellow.png">
+					<img src="img/colors/vespa/Pastel Yellow.png">
 					<li>V 9532**</li>
 					<li>Pastel Yellow</li>
 					<li>warna dasar 9102 WHITE</li>
@@ -920,7 +920,7 @@
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/colors/Vespa/Pastel Blue.png">
+					<img src="img/colors/vespa/Pastel Blue.png">
 					<li>V 9533**</li>
 					<li>Pastel Blue</li>
 					<li>warna dasar 9102 WHITE</li>
@@ -928,7 +928,7 @@
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/colors/Vespa/Pastel Pink.png">
+					<img src="img/colors/vespa/Pastel Pink.png">
 					<li>V 9534**</li>
 					<li>Pastel Pink</li>
 					<li>warna dasar 9102 WHITE</li>
@@ -936,7 +936,7 @@
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/colors/Vespa/Orange Tramonto.png">
+					<img src="img/colors/vespa/Orange Tramonto.png">
 					<li>V 9485**</li>
 					<li>Orange Tramonto</li>
 					<li>warna dasar 9102 WHITE</li>
@@ -944,7 +944,7 @@
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/colors/Vespa/White Innocenza.png">
+					<img src="img/colors/vespa/White Innocenza.png">
 					<li>V 9481**</li>
 					<li>White Innocenza</li>
 					<li>warna dasar 9102 WHITE</li>
@@ -952,7 +952,7 @@
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/colors/Vespa/Blue Audace.png">
+					<img src="img/colors/vespa/Blue Audace.png">
 					<li>V 9482**</li>
 					<li>Blue Audace</li>
 					<li>warna dasar 9102 WHITE</li>
@@ -960,7 +960,7 @@
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/colors/Vespa/Midnight Blue.png">
+					<img src="img/colors/vespa/Midnight Blue.png">
 					<li>V 9484**</li>
 					<li>Midnight Blue</li>
 					<li>warna dasar 9180 S.METALLIC</li>
@@ -968,7 +968,7 @@
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/colors/Vespa/Light Ivory.png">
+					<img src="img/colors/vespa/Light Ivory.png">
 					<li>V 9115**</li>
 					<li>Light Ivory</li>
 					<li>warna dasar 9102 WHITE</li>
@@ -976,7 +976,7 @@
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/colors/Vespa/Green Relax.png">
+					<img src="img/colors/vespa/Green Relax.png">
 					<li>V 9488**</li>
 					<li>Green Relax</li>
 					<li>warna dasar 9102 WHITE</li>
@@ -984,7 +984,7 @@
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/colors/Vespa/Red Passione.png">
+					<img src="img/colors/vespa/Red Passione.png">
 					<li>V 9480**</li>
 					<li>Red Passione</li>
 					<li>warna dasar 9102 WHITE</li>
@@ -992,7 +992,7 @@
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/colors/Vespa/Blue Vivace.png">
+					<img src="img/colors/vespa/Blue Vivace.png">
 					<li>V 9487**</li>
 					<li>Blue Vivace</li>
 					<li>warna dasar 9124 SILVER</li>
@@ -1000,7 +1000,7 @@
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/colors/Vespa/Piaggio Blue.png">
+					<img src="img/colors/vespa/Piaggio Blue.png">
 					<li>V 9185**</li>
 					<li>Piaggio Blue</li>
 					<li>warna dasar 9124 SILVER</li>
@@ -1008,7 +1008,7 @@
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/colors/Vespa/Grigio Titanio.png">
+					<img src="img/colors/vespa/Grigio Titanio.png">
 					<li>V 9486**</li>
 					<li>Grigio Titanio</li>
 					<li>warna dasar 9124 SILVER</li>
@@ -1016,7 +1016,7 @@
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/colors/Vespa/Green Bosco.png">
+					<img src="img/colors/vespa/Green Bosco.png">
 					<li>V 9486**</li>
 					<li>Green Bosco</li>
 					<li>warna dasar 9180 S.METALLIC</li>
@@ -1024,7 +1024,7 @@
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/colors/Vespa/Nardo Grey.png">
+					<img src="img/colors/vespa/Nardo Grey.png">
 					<li>V 9483**</li>
 					<li>Nardo Grey</li>
 					<li>warna dasar 9102 WHITE</li>
@@ -1032,7 +1032,7 @@
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/colors/Vespa/Yellow Sole.png">
+					<img src="img/colors/vespa/Yellow Sole.png">
 					<li>V 9490**</li>
 					<li>Yellow Sole</li>
 					<li>warna dasar 9102 WHITE</li>
@@ -1040,7 +1040,7 @@
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/colors/Vespa/Black Vulcano.png">
+					<img src="img/colors/vespa/Black Vulcano.png">
 					<li>V 9491**</li>
 					<li>Black Vulcano</li>
 					<li>warna dasar 9109 BLACK</li>
@@ -1048,7 +1048,7 @@
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/colors/Vespa/Dark Brown Met.png">
+					<img src="img/colors/vespa/Dark Brown Met.png">
 					<li>V 9251**</li>
 					<li>Dark Brown Met</li>
 					<li>warna dasar 9124 SILVER</li>
@@ -1319,7 +1319,7 @@
 	</div>
 
 	<div class="row copyright">
-	   <p>Copyright &copy; 2021 Foolish Developer</p>
+	   <p>Copyright &copy; 2020 - 2023 PT Difan Prima Paint. All Rights Reserved.</p>
 	</div>
 </footer>
 <!-- Footer End -->
