--- a/special.html
+++ b/special.html
@@ -43,7 +43,7 @@
 
 <main class="content">
 	<div class="preview">
-		<img class="imgPreview" src="img/Color Chat Motor/HI Temp Color/Color Chart_HI Temp_Black.jpg" alt="" >
+		<img class="imgPreview" src="img/Color Chat Motor/Special Color/Flintkote.jpg" alt="" >
 		<div class="preview-btn">
 			<button class="btn" onclick="previous()">Prev</button>
 			<div ><p class="colors-name">Flintkote<br>Special Anti Karat</p></div>
@@ -178,7 +178,7 @@
 	</div>
 
 	<div class="row copyright">
-	   <p>Copyright &copy; 2021 Foolish Developer</p>
+	   <p>Copyright &copy; 2020 - 2023 PT Difan Prima Paint. All Rights Reserved.</p>
 	</div>
 </footer>
 <!-- Footer End -->
@@ -193,9 +193,10 @@ let imgPreview =  document.querySelector('.imgPreview');
 let colorsName = document.querySelector('.colors-name');
 let videoLink = document.querySelector('iframe');
 let images = [
-	'img/Color Chat Motor/HI Temp Color/Color Chart_HI Temp_Black.jpg',
-	'img/Color Chat Motor/HI Temp Color/Color Chart_HI Temp_Silver.jpg',
-	'img/Color Chat Motor/HI Temp Color/Color Chart_HI Temp_Bronze.jpg'
+	'img/Color Chat Motor/Special Color/Flintkote.jpg',
+	'img/Color Chat Motor/Special Color/Chrome.jpg',
+	'img/Color Chat Motor/Special Color/Rose Gold.jpg',
+	'img/Color Chat Motor/Special Color/Hollogram.jpg',
 
 ];
 let color = ['FLINTKOTE <br> SPECIAL ANTI KARAT','CHROME','SC 9250*** <br>ROSE GOLD','GH 9500** <br>GLITTER HOLLOGRAM'];
