--- a/kawasaki.html
+++ b/kawasaki.html
@@ -157,7 +157,7 @@
 	</div>
 
 	<div class="row copyright">
-	   <p>Copyright &copy; 2021 Foolish Developer</p>
+	   <p>Copyright &copy; 2020 - 2023 PT Difan Prima Paint. All Rights Reserved.</p>
 	</div>
 </footer>
 <!-- Footer End -->
