--- a/index.html
+++ b/index.html
@@ -49,7 +49,11 @@
 <!-- Katalog Start -->
 <div class="katalog">
 	<div class="category" id="solid">
-		<div class="title"><img src="img/title/title-1.png"></div>
+		<div class="title">
+			<picture>
+				<source media="(min-width: 320px) and (max-width: 768px)" srcset="img/title-mobile/title-1.png"/><img src="img/title/title-1.png">
+			</picture>
+		</div>
 		<div class="colors">
 				<a href="list.html">
 				<div class="colors-items">
@@ -191,7 +195,9 @@
 	</div>
 	<div class="category" id="metallic">
 		<div class="title">
-			<img src="img/title/title-2.png">
+			<picture>
+				<source media="(min-width: 320px) and (max-width: 768px)" srcset="img/title-mobile/title-2.png"/><img src="img/title/title-2.png">
+			</picture>
 			<div class="colors">
 				<a href="metallic.html">
 				<div class="colors-items">
@@ -247,7 +253,9 @@
 	</div>
 	<div class="category" id="candytone">
 		<div class="title">
-				<img src="img/title/title-3.png">
+			<picture>
+				<source media="(min-width: 320px) and (max-width: 768px)" srcset="img/title-mobile/title-3.png"/><img src="img/title/title-3.png">
+			</picture>
 			</div>
 			<div class="colors">
 				<a href="candytone.html">
@@ -312,7 +320,9 @@
 	</div>
 	<div class="category" id="clear">
 		<div class="title">
-				<img src="img/title/title-4.png">
+			<picture>
+				<source media="(min-width: 320px) and (max-width: 768px)" srcset="img/title-mobile/title-4.png"/><img src="img/title/title-4.png">
+			</picture>
 			</div>
 			<div class="colors">
 				<a href="clear.html">
@@ -345,7 +355,9 @@
 	</div>
 	<div class="category" id="fluorescent">
 		<div class="title">
-				<img src="img/title/title-5.png">
+			<picture>
+				<source media="(min-width: 320px) and (max-width: 768px)" srcset="img/title-mobile/title-5.png"/><img src="img/title/title-5.png">
+			</picture>
 			</div>
 			<div class="colors">
 				<a href="fluorescent.html">
@@ -397,7 +409,9 @@
 	</div>
 	<div class="category" id="honda">
 		<div class="title">
-				<img src="img/title/title-6.png">
+			<picture>
+				<source media="(min-width: 320px) and (max-width: 768px)" srcset="img/title-mobile/title-6.png"/><img src="img/title/title-6.png">
+			</picture>
 			</div>
 			<div class="colors">
 				<a href="honda.html">
@@ -551,7 +565,9 @@
 	</div>
 	<div class="category" id="yamaha">
 		<div class="title">
-				<img src="img/title/title-7.png">
+			<picture>
+				<source media="(min-width: 320px) and (max-width: 768px)" srcset="img/title-mobile/title-7.png"/><img src="img/title/title-7.png">
+			</picture>
 		</div>
 			<div class="colors">
 				<a href="yamaha.html">
@@ -657,7 +673,9 @@
 	<div class="container-category">
 		<div class="category" id="kawasaki">
 			<div class="title">
-				<img src="img/title/title-8.png">
+			<picture>
+				<source media="(min-width: 320px) and (max-width: 768px)" srcset="img/title-mobile/title-8.png"/><img src="img/title/title-8.png">
+			</picture>
 			</div>
 			<div class="colors">
 				<a href="kawasaki.html">
@@ -680,7 +698,9 @@
 		</div>
 		<div class="category" id="suzuki">
 			<div class="title">
-				<img src="img/title/title-9.png">
+			<picture>
+				<source media="(min-width: 320px) and (max-width: 768px)" srcset="img/title-mobile/title-9.png"/><img src="img/title/title-9.png">
+			</picture>
 			</div>
 			<div class="colors">
 				<a href="suzuki.html">
@@ -704,7 +724,9 @@
 	</div>
 	<div class="category" id="velg">
 		<div class="title">
-				<img src="img/title/title-10.png">
+			<picture>
+				<source media="(min-width: 320px) and (max-width: 768px)" srcset="img/title-mobile/title-10.png"/><img src="img/title/title-10.png">
+			</picture>
 		</div>
 			<div class="colors">
 				<a href="velg.html">
@@ -783,7 +805,9 @@
 	</div>
 	<div class="category" id="pearl">
 		<div class="title">
-				<img src="img/title/title-11.png">
+			<picture>
+				<source media="(min-width: 320px) and (max-width: 768px)" srcset="img/title-mobile/title-11.png"/><img src="img/title/title-11.png">
+			</picture>
 		</div>
 			<div class="colors">
 				<a href="pearl.html">
@@ -820,7 +844,9 @@
 	</div>
 	<div class="category" id="harley">
 		<div class="title">
-				<img src="img/title/title-12.png">
+			<picture>
+				<source media="(min-width: 320px) and (max-width: 768px)" srcset="img/title-mobile/title-12.png"/><img src="img/title/title-12.png">
+			</picture>
 		</div>
 			<div class="colors">
 				<a href="harley.html">
@@ -889,7 +915,9 @@
 	</div>
 	<div class="category" id="vespa">
 			<div class="title">
-				<img src="img/title/title-13.png">
+			<picture>
+				<source media="(min-width: 320px) and (max-width: 768px)" srcset="img/title-mobile/title-13.png"/><img src="img/title/title-13.png">
+			</picture>
 			</div>
 			<div class="colors">
 				<a href="vespa.html">
@@ -1058,7 +1086,9 @@
 	</div>
 	<div class="category" id="xirallic">
 			<div class="title">
-				<img src="img/title/title-14.png">
+			<picture>
+				<source media="(min-width: 320px) and (max-width: 768px)" srcset="img/title-mobile/title-14.png"/><img src="img/title/title-14.png">
+			</picture>
 			</div>
 			<div class="colors">
 				<a href="xirallic.html">
@@ -1129,10 +1159,12 @@
 				</div>
 			</div>
 	</div>
-	<div class="container-category">
+	<div class="container container-category">
 		<div class="category" id="hi-temp">
 			<div class="title">
-				<img src="img/title/title-16.png">
+			<picture>
+				<source media="(min-width: 320px) and (max-width: 768px)" srcset="img/title-mobile/title-15.png"/><img src="img/title/title-16.png">
+			</picture>
 			</div>
 			<div class="colors">
 				<a href="hi temp.html">
@@ -1153,13 +1185,14 @@
 				</div>
 				<div class="colors-items">
 				<ul>
-					<img src="img/colors/Hi temp/HI-temp Bronze.png">
+					<img src="img/colors/Hi temp/HI-Temp Bronze.png">
 					<li></li>
 					<li>HI-temp Bronze</li>
 				</ul>
 				</div>
 			</div>
 		</div>
+		<div class="category1">
 		<a href="special.html">
 			<div class="colors-items ">
 				<div id="special">UNDERCOAT</div>
@@ -1202,10 +1235,13 @@
 					<li>Semprotkan sebanyak 2-3 lapis pada warna yang diinginkan</li>
 				</ul>
 			</div>
+		</div>
 	</div>
 	<div class="category" id="primer coat">
 		<div class="title">
-				<img src="img/title/title-15.png">
+				<picture>
+				<source media="(min-width: 320px) and (max-width: 768px)" srcset="img/title-mobile/title-16.png"/><img src="img/title/title-15.png">
+			</picture>
 		</div>
 		<div class="colors">
 			<a href="primer.html">
@@ -1228,7 +1264,9 @@
 	</div>
 	<div class="category" id="bunglon">
 		<div class="title">
-				<img src="img/title/title-17.png">
+			<picture>
+				<source media="(min-width: 320px) and (max-width: 768px)" srcset="img/title-mobile/title-17.png"/><img src="img/title/title-17.png">
+			</picture>
 		</div>
 		<div class="colors">
 			<a href="bunglon.html">
